@@ -10,7 +10,8 @@ New since 1.9.0:
 
 * cups.PPD.constraints attribute
 * cups.PPD.getOptionGroups() method changed to optionGroups attribute
-* cups.PPD.Group.options is not a list, not a dict
+* cups.PPD.Group.options is a list, not a dict
+* cups.PPD.findOption()
 * cups.PPD.writeFd()
 
 * cups.Connection.addPrinter now allows ppdname="foo.ppd" keyword for
